--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,11 +1,26 @@
-<form id="new-user-form" action="/users" method="post">
-  <h1>Sign up</h1> 
-  <label for="email">Email: </label>
-  <input id="email" type="email" name="email" value="">
-  <label for="password">Password: </label>
-  <input id="password" type="password" name="password" value="">
-  <label for="firstName">First name: </label>
-  <input id="firstName" type="firstName" name="firstName" value="">
-  <input id="submit" type="submit" value="Submit">
-</form>
-<a href="/">Sign in</a>
+
+<div class ="homepage-outermost">
+  <div class ="container">
+    <Head>
+
+      <link rel="stylesheet" href="/stylesheets/style.css">
+    </Head>
+
+      <form id="new-user-form" action="/users" method="post">
+        <h1>Sign up</h1>
+<br>
+        <input id="firstName" type="text" name="firstName" value="" placeholder=" First Name">
+<br>
+        <input id="surName" type="text" name="surName" value="" placeholder=" Surname">
+<br>
+        <input id="email" type="email" name="email" value="" placeholder=" Email">
+<br>
+        <input id="password" type="password" name="password" value="" placeholder=" Password">
+<br>
+        <input id="submit" type="submit" value="Submit">
+<br>
+        <a href="/">Sign in</a>
+      </form>
+  </div>
+</div>
+
