--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,133 @@
-body {
+/* body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+} */
+
+
+*{
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  padding: 50px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #f0f2f5;
+}
+
+a {
+  color: #00B7FF;
+}
+.homepage-outermost{
+
+  width: 100%;
+  height: 730px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.homepage-outer{
+
+  width: 75%;
+  height: 500px;
+  /* border: 1px solid white; */
+  display: flex;
+  justify-content: space-evenly;
+}
+.homepage-container-left{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 500;
+  font-size: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.homepage-container-left img{
+  width: 350px;
+}
+
+.homepage-container-left p{
+  padding-left: 40px;
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.container form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: white;
+  padding: 15px;
+  border-radius: 5px;
+  width: 370px;
+  box-shadow: 0 2px 4px rgb(0 0 0 / 10%),
+  0 8px 16px rgb(0 0 0 / 10%);
+}
+
+.container form input{
+  font-size: 16px;
+  height: 48px;
+  border-radius: 10px;
+  border: 1px solid rgb(238, 238, 238);
+  margin: 5px 0px;
+  width: 100%;
+}
+#login_submit_btn{
+  background-color: #1877f2;
+  font-size:  20px;
+  color: white;
+  font-weight: 700;
+  padding: 0px;
+  width: 100%;
+}
+
+#forgot_pass{
+  color: #1877f2  ;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  text-decoration: none;
+  padding-top: 10px;
+}
+.forgotten{
+  width: 100%;
+}
+/* hr{
+  margin: 15px 0px;
+  width: 100%;
+  border: none;
+  border-top: 1px solid rgb(210, 207, 207);
+} */
+
+#register_acc{
+  background-color: #42b72a;
+  font-size: 17px;
+  color: white;
+  font-weight: 800;
+  padding:  15px 0px;
+  border: none;
+  border-radius: 5px;
+  width: 200px;
+  margin-bottom: 2px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#submit{
+  background-color: #1877f2;
+  font-size:  20px;
+  color: white;
+  font-weight: 700;
+  padding: 0px;
+  width: 100%;
 }
