--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,23 +1,11 @@
-<h1 class="title">{{title}}</h1>
+{{!-- <h1 class="title">{{title}}</h1>
 <p>Welcome to {{title}}</p>
-<h1>Log in</h1>
-
-<form id="new-session-form" action="/sessions" method="post">
-  <label for="email">Email: </label>
-  <input id="email" type="email" name="email" value="">
-  <label for="password">Password: </label>
-  <input id="password" type="password" name="password" value="">
-  <input id="submit" type="submit" value="Submit">
-</form>
-
-<p>{{error}}</p>
-<a href="/users/new">Signup</a>
-
+<h1>Log in</h1> --}}
 
 <div class="homepage-outermost">
   <div class="homepage-outer">
     <div class="homepage-container-left">
-      <img src ="images/facebook_logo.svg" alt="">
+      <img src ="images/acebook_logo.svg" alt="">
       <p>Acebook helps you connect and share <br>with the people in your life.</p>
     </div>
 
@@ -39,3 +27,16 @@
 
   </div>
 </div>
+
+{{!-- <form id="new-session-form" action="/sessions" method="post">
+  <label for="email">Email: </label>
+  <input id="email" type="email" name="email" value="">
+  <label for="password">Password: </label>
+  <input id="password" type="password" name="password" value="">
+  <input id="submit" type="submit" value="Submit">
+</form> --}}
+
+{{!-- <p>{{error}}</p>
+<a href="/users/new">Signup</a> --}}
+
+
