--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,12 +24,13 @@
       <div class="navbar-button-container">
         <div class="profile-button">
             <form  class="margin-remover" action="/profiles/:username" method="GET">
-            <input class="profile-button-input" type="submit" value="Profile" />
+              <input class="profile-button-input" type="submit" value="Profile">
+            </form>
         </div>
 
         <div class="logout-button">
           <form action="/sessions?_method=DELETE" method="POST">
-            <input class="logout-button-input" type="submit" value="Log Out" />
+            <input class="logout-button-input" type="submit" value="Log Out">
           </form>
         </div>
       </div>
