--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -10,7 +10,7 @@
   <label for="surname">surname: </label>
   <input id="surname" type="surname" name="surname" value="">
   <label for="profilePic">Drag your profile pic url here: </label>
-  <input id="profilePic" type="profilePic" name="profilePic" value="">
+  <input id="profilePic" type="profilePic" name="profilePic">
   <input id="submit" type="submit" value="Submit">
 </form>
 <div id="error">{{error}}</div>
