rewritten to use object ids

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -4,7 +4,7 @@
   {{#each posts}}
 <ul>
   <li>{{this.message}}</li>
-  <li>{{this.username}}</li>
+  <li>{{this.user_id.username}}</li>
   <li>{{this.time_posted}}</li>
 </ul>
 </div>
