updating profile details still in progress

--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -7,10 +7,10 @@
   <label for="firstName" >First name: </label>
   <input id="firstName" type="firstName" name="firstName" value="" placeholder="first name required">
 <br>
-  <label for="surname">surname: </label>
-  <input id="surname" type="surname" name="surname" value="">
+  <label for="lastName">lastName: </label>
+  <input id="lastName" type="lastName" name="lastName" value="">
   <label for="profilePic">Drag your profile pic url here: </label>
-  <input id="profilePic" type="profilePic" name="profilePic">
+  <input id="profilePic" type="profilePic" name="profilePic" value="">
   <input id="submit" type="submit" value="Submit">
 </form>
 <div id="error">{{error}}</div>
