--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -6,7 +6,7 @@
 </form>
 
 <a href="/profile">Profile</a>
-<p>Welcome {{name}}</p>
+<p>Welcome {{firstName}}</p>
 <br>
 
 <form id="new-post-form" action="/posts" method="post">
