--- a/views/profile/index.hbs
+++ b/views/profile/index.hbs
@@ -4,16 +4,16 @@
   <input id="logout" type="submit" value="Log out">
 </form>
 
-<p>Welcome {{name}}</p>
+<p>Welcome {{firstName}}</p>
 
 <img src="{{{url}}}" width="200px" 
      height="auto"/> 
 <br>
 
-<div>First name: {{name}}</div>
-<div>Surname: {{surname}}</div>
+<div>First name: {{firstName}}</div>
+<div>Last name: {{lastName}}</div>
 <div>Email: {{email}}</div>
 <div>Password: {{password}}</div>
-<a href="/profile/edit">Edit your details</div>
-
+<a id="edit-page" href="/profile/edit">Edit your details</div>
+<br>
 <a href="/posts">Back to posts</a>
