--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -11,8 +11,8 @@
 
     <div class ="container">
       <form action='/sessions' method='POST'>
-        <input type="email" name="email" id="user_email" placeholder=" Email address">
-        <input type="password" name="password" id="user_password" placeholder=" Password">
+        <input type="email" name="email" id="user_email" placeholder=" Email address" required>
+        <input type="password" name="password" id="user_password" placeholder=" Password" required>
         <input type="submit" id="login_submit_btn"  value="Log In">
 
         {{!-- <a href="#" id="forgot_pass"> Forgotten password?</a> --}}
