--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,25 +1,53 @@
-<h1 class="title">{{title}}</h1>
+<div class="logout">
+  <form action='/sessions?_method=DELETE' method='POST'>
+    <input id="logout_post" type="submit" value="Log out">
+  </form>
 
-<form action='/sessions?_method=DELETE' method='POST'>
-  <input id="logout" type="submit" value="Log out">
+  <a href="/profile">Profile</a>
 
-</form>
 
-<a href="/profile">Profile</a>
-<p>Welcome {{name}}</p>
-<br>
+  {{!-- <h1 class="title">{{title}}</h1> --}}
 
-<form id="new-post-form" action="/posts" method="post">
-  <label for="message">Whats on your mind? </label>
-  <input id="message" type="text" name="message" value="">
-  <input id="submit" type="submit" value="Submit">
-</form>
+  {{!-- <a href="/profile">Profile</a> --}}
+  {{!-- <p id="Welcome">Welcome {{name}}</p> --}}
 
-<div id="blank-message">{{blank}}</div>
+  <div class="homepage-outermost">
+    <div class="container">
 
-<h1>Timeline</h1>
-<ul class="posts">
-  {{#each posts}}
-  <li>{{this.message}}</li>
-  {{/each}}
-</ul>
+      <div class="split right">
+        <div class="centered">
+
+
+          <form id="new-post-form" action="/posts" method="post">
+            {{!-- <label for="message">Whats on your mind? </label> --}}
+            <input id="message" type="text" name="message" value="" placeholder=" Whats on your mind?">
+            <input id="submit" type="submit" value="POST">
+
+            <div id="blank-message">{{blank}}</div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="split left">
+
+      <img href="http://localhost:3030/" class="post_logo" src="images/acebook_logo.svg" alt="">
+      <p id="welcome">Welcome {{name}}</p>
+
+      <div class="centered">
+
+        <form class="container_post">
+          <div>
+            <h1>Timeline</h1>
+            <br>
+            <ul class="posts">
+              {{#each posts}}
+              <li>{{this.message}}</li>
+              {{/each}}
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
