--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -1,24 +1,74 @@
-<h1 class="title">{{title}}</h1>
+{{!-- <div class ="homepage-outermost">
+  <div class ="container">
+    <h1 class="title">{{title}}</h1>
 
-<form action='/sessions?_method=DELETE' method='POST' >
-      <input id="logout" type="submit" value="Log out">
-      
-</form>
+    <form action='/sessions?_method=DELETE' method='POST' >
+          <input id="logout" type="submit" value="Log out">
 
-<br>
+    </form>
 
-<form id="new-post-form" action="/posts" method="post">
-  <label for="message">Whats on your mind? </label>
-  <input id="message" type="text" name="message" value="">
-  <input type="submit" value="Submit">
-</form>
+    <br>
+
+    <form id="new-post-form" action="/posts" method="post">
+
+      <label for="message">Whats on your mind? </label>
+      <input id="message" type="text" name="message" value="">
+
+      <input type="submit" value="Submit">
+    </form>
 
 
-<div id="blank message">{{blank}}</div>
+    <div id="blank message">{{blank}}
 
-<h1>Timeline</h1>
-<ul class="posts">
-  {{#each posts}}
-  <li>{{this.message}}</li>
-  {{/each}}
-</ul>
+    <h1>Timeline</h1>
+    <ul class="posts">
+      {{#each posts}}
+      <li>{{this.message}}</li>
+      {{/each}}
+    </ul>
+    </div>
+
+  </div>
+</div> --}}
+
+<div class="logout">
+  <form action='/sessions?_method=DELETE' method='POST'>
+  <input id="logout_post" type="submit" value="Log out">
+  </form>
+
+<a href="/profile">Profile</a>
+
+  <div class ="homepage-outermost">
+
+    <div class ="container">
+
+      <h1 class="title">{{title}}</h1>
+
+
+
+      {{!-- <a href="/profile">Profile</a> --}}
+      <p>Welcome {{name}}</p>
+      <br>
+
+      <form id="new-post-form" action="/posts" method="post">
+        {{!-- <label for="message">Whats on your mind? </label> --}}
+        <input id="message" type="text" name="message" value="" placeholder=" Whats on your mind?">
+        <input id="submit" type="submit" value="POST">
+
+      <div id="blank-message">{{blank}}</div>
+      </form>
+
+      <br>
+      {{!-- <form class="container_post">
+      <div >
+      <h1>Timeline</h1>
+      <br>
+      <ul class="posts">
+        {{#each posts}}
+        <li>{{this.message}}</li>
+        {{/each}}
+      </div>
+      </form> --}}
+    </div>
+  </div>
+</div>
