--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -28,7 +28,7 @@
   <form action="/posts/like" method="post">
     <input type="hidden" name="post" value="{{this._id}}">
     <label for="like">Likes: {{this.likes.length}}</label>
-    <input type="submit" value="like">
+    <input class="like" type="submit" value="like">
   </form>
 
   <a href="/profile">
