--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -153,9 +153,14 @@ a {
   height: 50px;
 }
 
-/* .posts {
+.posts {
+  width: 100%;
+  margin-top: 15px;
+  border-radius: 15px;
+  background-color: white;
+  box-shadow: 0px 5px 7px -7px rgb(0 0 0 / 75%);
 
-} */
+}
 .container_post{
   overflow:auto;
   display: flex;
@@ -193,7 +198,7 @@ li{
   border-width: 3px;
   border-radius: 5px;
   margin: 10px;
-  width: 370px;
+  width: auto;
   height:50px;
 }
 
@@ -202,10 +207,6 @@ li{
   padding-left: 35px;
 }
 
-.posts{
-  overflow: auto;
-
-}
 
 
 /* ----------timeline posts css --------*/
@@ -260,7 +261,7 @@ li{
 .header__middle {
   display: flex;
   flex: 1;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 .header__option .material-icons {
@@ -373,8 +374,9 @@ li{
 }
 
 .storyReel {
-  padding: 10px 0;
+  padding: 5px 0;
   display: flex;
+  justify-content: space-between;
 }
 
 .main__body {
@@ -564,7 +566,7 @@ body {
 @media (min-width: 320px) {
   .storyReel {
     width: 100%;
-    overflow-x: scroll;
+    overflow-x: inherit;
   }
 }
 
