Latest changed for post page

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -14,7 +14,7 @@
   <!-- header starts -->
   <div class="header">
     <div class="header__left">
-      <img src="images/acebook_logo.svg" alt="" />
+      <img src="images/acebook_logo.svg" alt=""/>
       <div class="header__input">
         <span class="material-icons"> search </span>
         <input type="text" placeholder="Search Acebook" />
@@ -42,7 +42,7 @@
     <div class="header__right">
       <div class="header__info">
         <img class="user__avatar" src="images/img/Makers.png" alt="" />
-        <h4><p id="welcome">Welcome {{name}}</p></h4>
+        <h4><a href="/profile">Welcome {{name}}</a></h4>
       </div>
       <span class="material-icons"> forum </span>
       <span class="material-icons"> notifications_active </span>
@@ -57,7 +57,8 @@
     <div class="sidebar">
       <div class="sidebarRow">
         <img class="user__avatar" src="images/img/Makers.png" alt="" />
-        <h4><p id="welcome">Welcome {{name}}</p></h4>
+        <h4><a href="/profile">Welcome {{name}}</a></h4>
+
       </div>
 
       <div class="sidebarRow">
@@ -327,11 +328,11 @@
     <!-- feed ends -->
 
     <div style="flex: 0.33" class="widgets">
-      <div class="fb-page" data-href="https://www.facebook.com/MakersAcademy/" data-tabs="timeline" data-width="500"
+      <div class="fb-page" data-href="https://www.facebook.com/facebook/" data-tabs="timeline" data-width="500"
         data-height="1000" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
         data-show-facepile="true">
-        <blockquote cite=https://www.facebook.com/MakersAcademy/" class="fb-xfbml-parse-ignore">
-          <a href="https://www.facebook.com/MakersAcademy/"></a>
+        <blockquote cite=https://www.facebook.com/facebook/" class="fb-xfbml-parse-ignore">
+          <a href="https://www.facebook.com/facebook/"></a>
         </blockquote>
       </div>
     </div>
