--- a/views/profile/index.hbs
+++ b/views/profile/index.hbs
@@ -1,3 +1,4 @@
+
 <h1 class="title">{{title}}</h1>
 
 <form action='/sessions?_method=DELETE' method='POST'>
@@ -5,8 +6,7 @@
 </form>
 <p>Welcome {{name}}</p>
 
-<img src="{{{url}}}" width="200px" 
-     height="auto"/> 
+<img src="{{{url}}}" width="200px" height="auto" />
 
 <br>
 
