--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -5,7 +5,7 @@
       <br>
       <input id="firstName" type="text" name="firstName" value="" placeholder=" First Name" required>
       <br>
-      <input id="surName" type="text" name="surName" value="" placeholder=" Surname" required>
+      <input id="surName" type="text" name="surName" value="" placeholder=" Surname">
       <br>
       <input id="email" type="email" name="email" value="" placeholder=" Email" required>
       <br>
