--- a/views/profile/index.hbs
+++ b/views/profile/index.hbs
@@ -14,6 +14,6 @@
 <div>Last name: {{lastName}}</div>
 <div>Email: {{email}}</div>
 <div>Password: {{password}}</div>
-<a id="edit-page" href="/profile/edit">Edit your details</div>
+<a id="edit-page" href="/profile/edit">Edit your details</a></div>
 <br>
 <a href="/posts">Back to posts</a>
