--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>{{title}}</title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <script type='text/javascript' src='/javascripts/layout.js' defer></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
 
 <body>
